minor UI changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
 flask
 flask-mysqldb
 pyyaml
-MySQLdb.cursors
-re
-render_template
-request
-redirect
-url_for 
-session
-pip install MySQL-python
+mysql-python-connector
