--- a/license_system/catlab.ini
+++ b/license_system/catlab.ini
@@ -6,3 +6,9 @@ software_id = SW013
 [user]
 id = 4
 
+[email]
+server = smtp.gmail.com
+port = 587
+username = catlab.licensing@gmail.com
+password = your_app_password_here
+
